hphp/hack/test/typecheck/postfix_parse.php.exp
File "postfix_parse.php", line 15, characters 3-9:
Typing error (Typing[4427])
  File "postfix_parse.php", line 15, characters 3-9:
  Expected `num` because this is used in an arithmetic operation
  File "postfix_parse.php", line 5, characters 12-17:
  But got `string`
